--- a/app/src/main/res/layout/activity_font.xml
+++ b/app/src/main/res/layout/activity_font.xml
@@ -32,10 +32,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:background="@color/background_sub"
-            android:padding="30dp"
             android:layout_marginTop="4dp"
-            android:orientation="vertical">
+            android:background="@color/background_sub"
+            android:orientation="vertical"
+            android:padding="30dp">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -43,10 +43,10 @@
                 android:layout_gravity="center"
                 android:layout_marginRight="8dp"
                 android:layout_marginBottom="10dp"
-                android:textStyle="bold"
                 android:text="적용 예시"
                 android:textColor="@color/font"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/exampleTextView"
@@ -58,6 +58,17 @@
                 android:text="가나다라마바사아자차카타파하\n폰트적용 예시입니다~ \n오늘도 좋은 하루 되세요:)"
                 android:textColor="@color/font"
                 android:textSize="17sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginRight="8dp"
+                android:layout_marginBottom="10dp"
+                android:text="(단, 폰트마다 크기가 다를 수 있습니다.)"
+                android:textColor="@color/pastel_700"
+                android:textSize="13sp"
+                android:textStyle="bold" />
 
         </LinearLayout>
 
@@ -71,10 +82,10 @@
             android:layout_marginBottom="4dp"
             android:background="@color/background_sub"
             android:orientation="vertical"
-            android:paddingTop="20dp"
-            android:paddingBottom="20dp"
             android:paddingLeft="20dp"
-            android:paddingRight="20dp">
+            android:paddingTop="20dp"
+            android:paddingRight="20dp"
+            android:paddingBottom="20dp">
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -96,7 +107,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="bottom"
                     android:layout_marginRight="10dp"
-                    android:text="(총 12개)"
+                    android:text="(총 13개)"
                     android:textColor="@color/pastel_700"
                     android:textSize="15dp" />
 
@@ -116,121 +127,131 @@
                         android:id="@+id/systemFontButton"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="12dp"
+                        android:layout_marginBottom="7dp"
                         android:fontFamily="sans-serif"
-                        android:text=" 시스템서체"
+                        android:text="시스템서체"
                         android:textColor="@color/font"
-                        android:textSize="15dp" />
+                        android:textSize="13dp" />
 
                     <RadioButton
                         android:id="@+id/basicFontButton"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="12dp"
+                        android:layout_marginBottom="7dp"
                         android:fontFamily="@font/font"
-                        android:text=" THE얌전해진언니체"
+                        android:text="THE얌전해진언니체"
                         android:textColor="@color/font"
-                        android:textSize="15dp" />
+                        android:textSize="13dp" />
 
                     <RadioButton
                         android:id="@+id/fontButton"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="12dp"
+                        android:layout_marginBottom="7dp"
                         android:fontFamily="@font/font1"
-                        android:text=" 교보손글씨체"
+                        android:text="교보손글씨체"
                         android:textColor="@color/font"
-                        android:textSize="15dp" />
+                        android:textSize="13dp" />
 
                     <RadioButton
                         android:id="@+id/fontButton2"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="12dp"
+                        android:layout_marginBottom="7dp"
                         android:fontFamily="@font/font2"
-                        android:text=" 점꼴체"
+                        android:text="점꼴체"
                         android:textColor="@color/font"
-                        android:textSize="15dp" />
+                        android:textSize="13dp" />
 
                     <RadioButton
                         android:id="@+id/fontButton3"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="12dp"
+                        android:layout_marginBottom="7dp"
                         android:fontFamily="@font/font3"
-                        android:text=" 넥슨배찌체"
+                        android:text="넥슨배찌체"
                         android:textColor="@color/font"
-                        android:textSize="15dp" />
+                        android:textSize="13dp" />
 
                     <RadioButton
                         android:id="@+id/fontButton4"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="12dp"
+                        android:layout_marginBottom="7dp"
                         android:fontFamily="@font/font4"
-                        android:text=" 미니콩다방체"
+                        android:text="미니콩다방체"
                         android:textColor="@color/font"
-                        android:textSize="15dp" />
+                        android:textSize="13dp" />
 
                     <RadioButton
                         android:id="@+id/fontButton5"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="12dp"
+                        android:layout_marginBottom="7dp"
                         android:fontFamily="@font/font5"
-                        android:text=" 꼬마나비체"
+                        android:text="꼬마나비체"
                         android:textColor="@color/font"
-                        android:textSize="15dp" />
+                        android:textSize="13dp" />
 
                     <RadioButton
                         android:id="@+id/fontButton6"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="12dp"
+                        android:layout_marginBottom="7dp"
                         android:fontFamily="@font/font6"
-                        android:text=" IM혜민체"
+                        android:text="J개구쟁이체"
                         android:textColor="@color/font"
-                        android:textSize="15dp" />
+                        android:textSize="13dp" />
 
                     <RadioButton
                         android:id="@+id/fontButton7"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="12dp"
+                        android:layout_marginBottom="7dp"
                         android:fontFamily="@font/font7"
-                        android:text=" 타닥타닥체"
+                        android:text="타닥타닥체"
                         android:textColor="@color/font"
-                        android:textSize="15dp" />
+                        android:textSize="13dp" />
 
                     <RadioButton
                         android:id="@+id/fontButton8"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="12dp"
+                        android:layout_marginBottom="7dp"
                         android:fontFamily="@font/font8"
-                        android:text=" 쿠키런체"
+                        android:text="쿠키런체"
                         android:textColor="@color/font"
-                        android:textSize="15dp" />
+                        android:textSize="13dp" />
 
                     <RadioButton
                         android:id="@+id/fontButton9"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="12dp"
+                        android:layout_marginBottom="7dp"
                         android:fontFamily="@font/font9"
-                        android:text=" 온글잎 만두몽키체"
+                        android:text="온글잎 만두몽키체"
                         android:textColor="@color/font"
-                        android:textSize="15dp" />
+                        android:textSize="13dp" />
 
                     <RadioButton
                         android:id="@+id/fontButton10"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="12dp"
+                        android:layout_marginBottom="7dp"
                         android:fontFamily="@font/font10"
-                        android:text=" 온글잎 윤우체"
+                        android:text="온글잎 윤우체"
                         android:textColor="@color/font"
-                        android:textSize="15dp" />
+                        android:textSize="13dp" />
+
+                    <RadioButton
+                        android:id="@+id/fontButton11"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="7dp"
+                        android:fontFamily="@font/font11"
+                        android:text="코트라 희망체"
+                        android:textColor="@color/font"
+                        android:textSize="13dp" />
 
                 </RadioGroup>
             </androidx.core.widget.NestedScrollView>
