--- a/app/src/main/res/layout/calendar_item.xml
+++ b/app/src/main/res/layout/calendar_item.xml
@@ -35,20 +35,24 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:textSize="15dp"
+            android:layout_marginRight="10dp"
+            android:text="12:00"
             android:textColor="@color/gray"
-            android:text="12:00" />
+            android:textSize="13dp" />
 
         <TextView
             android:id="@+id/locationTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
-            android:lineSpacingExtra="7dp"
-            android:textSize="13dp"
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@id/timeTextView"
+            android:gravity="right"
+            android:singleLine="true"
+            android:ellipsize="marquee"
+            android:text="고양시 일산서구"
             android:textColor="@color/pastel_700"
-            android:text="고양시 일산서구" />
+            android:textSize="12dp" />
 
     </RelativeLayout>
 
@@ -61,7 +65,7 @@
         android:maxLines="3"
         android:ellipsize="end"
         android:text="내용입니다\n띄어쓰기"
-        android:textSize="14dp"
+        android:textSize="13dp"
         android:textColor="@color/font_contents" />
 
     <ImageView
