--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -25,11 +25,11 @@
 
             <ImageView
                 android:id="@+id/moodImageView"
-                android:layout_width="45dp"
-                android:layout_height="45dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:layout_alignParentLeft="true"
                 android:layout_centerVertical="true"
-                android:padding="7dp"
+                android:padding="8dp"
                 app:srcCompat="@drawable/mood_angry_color" />
 
             <LinearLayout
@@ -69,15 +69,31 @@
                         android:textSize="16sp"
                         android:textStyle="bold" />
 
-                    <ImageView
-                        android:id="@+id/starImageView"
-                        android:layout_width="20dp"
-                        android:layout_height="20dp"
+                    <LinearLayout
+                        android:id="@+id/bookmark_view"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
                         android:layout_alignParentRight="true"
                         android:layout_centerVertical="true"
                         android:layout_marginRight="8dp"
-                        app:srcCompat="@drawable/star" />
+                        android:orientation="vertical">
 
+                        <ImageView
+                            android:id="@+id/starImageView"
+                            android:layout_width="20dp"
+                            android:layout_height="20dp"
+                            android:layout_marginBottom="2dp"
+                            app:srcCompat="@drawable/star" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="즐겨찾기"
+                            android:textColor="@color/yellow"
+                            android:textSize="6dp" />
+
+                    </LinearLayout>
                 </RelativeLayout>
 
                 <LinearLayout
@@ -101,6 +117,7 @@
                         android:layout_width="12dp"
                         android:layout_height="12dp"
                         android:layout_marginLeft="7dp"
+                        android:layout_gravity="center_vertical"
                         android:src="@drawable/exist_picture" />
 
                 </LinearLayout>
@@ -111,16 +128,16 @@
             android:id="@+id/contentsTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="12dp"
             android:layout_marginBottom="8dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:lineSpacingExtra="5dp"
+            android:lineSpacingExtra="3dp"
             android:text="내용"
             android:maxLines="3"
             android:ellipsize="end"
             android:textColor="@color/font_contents"
-            android:textSize="15sp" />
+            android:textSize="14sp" />
 
         <RelativeLayout
             android:id="@+id/weatherAndLocationLayout"
@@ -144,8 +161,10 @@
                 android:layout_height="wrap_content"
                 android:layout_toRightOf="@id/weatherImageView"
                 android:text="고양시 일산서구"
+                android:singleLine="true"
+                android:ellipsize="marquee"
                 android:textColor="@color/pastel_700"
-                android:textSize="12sp" />
+                android:textSize="11sp" />
 
         </RelativeLayout>
     </LinearLayout>
@@ -174,19 +193,19 @@
                 android:layout_marginRight="10dp"
                 android:text="2021년 04월 10일"
                 android:textColor="@color/font"
-                android:textSize="17sp"
+                android:textSize="16sp"
                 android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/weekTextView2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_toRightOf="@id/dateTextView2"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="10dp"
+                android:layout_toRightOf="@id/dateTextView2"
                 android:text="화"
                 android:textColor="@color/pastel_700"
-                android:textSize="17sp"
+                android:textSize="16sp"
                 android:textStyle="bold" />
 
             <ImageView
@@ -288,13 +307,13 @@
                 android:id="@+id/contentsTextView2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="30dp"
-                android:lineSpacingExtra="7dp"
+                android:layout_marginBottom="20dp"
+                android:lineSpacingExtra="3dp"
                 android:text="내용"
                 android:maxLines="3"
                 android:ellipsize="end"
                 android:textColor="@color/font_contents"
-                android:textSize="15sp" />
+                android:textSize="14sp" />
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -311,6 +330,7 @@
                     android:id="@+id/weatherImageView2"
                     android:layout_width="18dp"
                     android:layout_height="18dp"
+                    android:layout_marginRight="20dp"
                     android:layout_marginLeft="20dp"
                     android:layout_toRightOf="@id/moodImageView2" />
 
@@ -318,11 +338,15 @@
                     android:id="@+id/locationTextView2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:layout_centerVertical="true"
+                    android:layout_centerInParent="true"
+                    android:layout_toLeftOf="@id/timeTextView2"
+                    android:layout_toRightOf="@id/weatherImageView2"
+                    android:gravity="center"
+                    android:singleLine="true"
+                    android:ellipsize="marquee"
                     android:text="고양시 일산서구"
                     android:textColor="@color/pastel_700"
-                    android:textSize="15sp" />
+                    android:textSize="12sp" />
 
                 <TextView
                     android:id="@+id/timeTextView2"
@@ -330,9 +354,10 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
+                    android:layout_marginLeft="20dp"
                     android:text="AM 5:00"
                     android:textColor="@color/gray"
-                    android:textSize="15sp" />
+                    android:textSize="12sp" />
 
             </RelativeLayout>
         </LinearLayout>
