--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -408,7 +408,7 @@
 
 
 
-    <!-- IM혜민체 -->
+    <!-- J개구쟁이체 -->
     <style name="Theme.DiaryProject6" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorAccent">@color/pastel_700</item>
@@ -674,6 +674,58 @@
     </style>
     <style name="customSpinnerFontStyle10" parent="Widget.AppCompat.Spinner">
         <item name="android:fontFamily">@font/font10</item>
+    </style>
+
+    <!-- 코트라 희망체 -->
+    <style name="Theme.DiaryProject11" parent="Theme.AppCompat.Light.NoActionBar">
+        <!-- Primary brand color. -->
+        <item name="colorAccent">@color/pastel_700</item>
+        <item name="colorPrimary">@color/purple_500</item>
+        <item name="colorPrimaryVariant">@color/background</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <!-- Secondary brand color. -->
+        <item name="colorSecondary">@color/teal_200</item>
+        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorOnSecondary">@color/black</item>
+        <!-- Status bar color. -->
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <!-- window light status bar(API 23 부터) -->
+        <item name="android:windowLightStatusBar">true</item>
+        <!-- Customize your theme here. -->
+        <!--custom font-family 적용-->
+        <item name="bottomNavigationStyle">@style/Widget.BottomNavigationView11</item>
+        <item name="android:textViewStyle">@style/customTextViewFontStyle11</item>
+        <item name="android:buttonStyle">@style/customButtonFontStyle11</item>
+        <item name="editTextStyle">@style/customEditTextFontStyle11</item>
+        <item name="radioButtonStyle">@style/customRadioButtonFontStyle11</item>
+        <item name="android:checkboxStyle">@style/customCheckboxFontStyle11</item>
+        <item name="android:spinnerStyle">@style/customSpinnerFontStyle11</item>
+        <item name="mcv_headerTextAppearance">@style/customCalenderHeaderFontStyle11</item>
+        <item name="mcv_dateTextAppearance">@style/customCalenderHeaderFontStyle11</item>
+    </style>
+    <style name="Widget.BottomNavigationView11" parent="Widget.Design.BottomNavigationView">
+        <item name="fontFamily">@font/font11</item>
+    </style>
+    <style name="customCalenderHeaderFontStyle11">
+        <item name="android:fontFamily">@font/font11</item>
+    </style>
+    <style name="customTextViewFontStyle11" parent="@android:style/Widget.DeviceDefault.TextView">
+        <item name="android:fontFamily">@font/font11</item>
+    </style>
+    <style name="customButtonFontStyle11" parent="@android:style/Widget.DeviceDefault.Button.Borderless">
+        <item name="android:fontFamily">@font/font11</item>
+    </style>
+    <style name="customEditTextFontStyle11" parent="@android:style/Widget.DeviceDefault.EditText">
+        <item name="android:fontFamily">@font/font11</item>
+    </style>
+    <style name="customRadioButtonFontStyle11" parent="@android:style/Widget.DeviceDefault.CompoundButton.RadioButton">
+        <item name="android:fontFamily">@font/font11</item>
+    </style>
+    <style name="customCheckboxFontStyle11" parent="@android:style/Widget.DeviceDefault.CompoundButton.CheckBox">
+        <item name="android:fontFamily">@font/font11</item>
+    </style>
+    <style name="customSpinnerFontStyle11" parent="Widget.AppCompat.Spinner">
+        <item name="android:fontFamily">@font/font11</item>
     </style>
 
 </resources>
